used css to improve on the font color and size to ensure visibility of the text.

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  color:white;
+  color:palevioletred;
   font-size: 25px;
   font-style: italic;
 }
